--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,18 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.1.51'
     repositories {
         google()
         jcenter()
     }
+
+    ext {
+        kotlin_version = '1.1.51'
+        android_support_version = '26.1.0'
+        android_support_constraint_version = '1.0.2'
+        retrofit2_version = '2.3.0'
+    }
+
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
