--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,8 @@
     <uses-permission android:name="android.permission.CAMERA" />
 
     <uses-feature android:name="android.hardware.camera.front" />
+
+    <!--TODO Verificar necessidade-->
     <uses-feature android:name="android.hardware.camera2.full" />
 
     <uses-permission android:name="android.permission.WRITE_INTERNAL_STORAGE" />
